--- a/index.html
+++ b/index.html
@@ -3,8 +3,54 @@
 <head>
 <meta charset="utf-8">
 <title>Capstone Project</title>
+  <link href="material/reset.css" rel="stylesheet" type="text/css"/>
+  <link href="material/style.css" rel="stylesheet" type="text/css"/>
+  <link href="https://fonts.googleapis.com/css?family=Heebo:300,400,500,800" rel="stylesheet"/>
 </head>
 
 <body>
+
+  <header>
+  
+  <!--Logo + nav section-->
+  
+  	<div id="logo">
+  	  <div class="image">
+  	    <img src="material/images/ic-logo.svg" alt="logo"/>
+  	  </div>
+  	    <div class="logotext">
+  	      <span>COLMAR</span>
+  	      <span>ACADEMY</span>
+  	    </div>
+  	</div>
+  	<div id="nav">
+  	  <a href="#">On campus</a>
+  	  <a href="#">Online</a>
+  	  <a href="#">For companies</a>
+  	  <a href="#">Sign in</a>	
+  	</div>	
+  </header>
+  
+<!--banner section-->
+ 
+  <div class="banner">
+  	<div class="image">
+  	  <img src="material/images/banner.jpg" alt="banner"/>
+    </div>
+  	<div class="info">
+  	  <p>Learn something <br>new everyday</p>
+  	  <br>
+  	  <p>It is fun to create this capstone <br>project but it's a challenge.</p>	
+  	  <br>
+  	  <span><a href="#">Start here</a></span>
+  	</div>
+  </div>
+  	
+<!--content section-->
+
+  <content>
+    <div class=""
+  </content>
+
 </body>
 </html>
