--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@
 <body>
 
   <header>
-  
-  <!--Logo + nav section-->
-  
+<!--Logo + nav section-->
   	<div id="logo">
   	  <div class="image">
   	    <img src="material/images/ic-logo.svg" alt="logo"/>
@@ -49,7 +47,72 @@
 <!--content section-->
 
   <content>
-    <div class=""
+<!--first section-->
+    <div class="section1row1">
+<!--row 1-->
+      <div class="row1">
+<!--left side-->	
+        <div class="leftimage">
+          <img src="material/images/information-main.jpg" alt="a studying man"/>	
+        </div>
+<!--right side-->
+        <div class="right">
+<!--top row from right side-->
+          <div class="top">
+            <div class="rightimage">
+              <img src="material/images/information-orientation.jpg" alt="orientation date"/>
+            </div>
+            <div class="info">
+              <span>Orientation date</span>	
+              <p>Tue 10/11 & Wed 10/12: <br>8am-3pm</p>
+              <a href="#">Read more</a>
+            </div>	
+          </div>
+<!--bottom row from right side-->
+          <div class="bottom">
+            <div class="rightimage">
+              <img src="material/images/information-campus.jpg" alt="our campus"/>	
+            </div>
+            <div class="info">
+              <span>Our campus</span>
+              <p>Find which campus is close <br>by you</p>
+              <a href="#">Read more</a>
+            </div>		
+          </div>  	
+        </div>
+      </div>
+	  </div> 
+<!--row 2-->
+     <div class="section1row2">
+      <div class="row2">
+        <div class="row1">
+          <div class="info">
+              <span>It doesn't hurt to keep practicing</span>
+              <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren.</p>
+              <span>Emanuel, Sr Strategist at Hiring.com</span>
+        </div>
+        <!--
+        <div class="row">
+          <div class="image">
+          	<img src="material/images/information-guest-lecture.jpg" alt="Oliver Sack"/>
+          </div>
+          <div class="info">
+           <span>Our guest lecture</span>
+           <p>Join a keynote with Oliver Sack <br>about music in medical treatment</p>
+           <a href="#">Read more</a>
+          </div>	
+        </div>	
+        -->
+      </div>
+    </div>	
+<!-- next section-->    
+    <div class="section2">
+    	
+    </div>
+<!--next section-->    
+    <div class="section3">
+    	
+    </div>
   </content>
 
 </body>
