finished capstone project

--- a/index.html
+++ b/index.html
@@ -70,6 +70,9 @@
       	  <div class="image">
       	    <img src="material/images/information-orientation.jpg" alt="Orientation"/>	
       	  </div>
+      	  <div class="mqrows">
+      	  	<img src="material/images/information-orientation-mobile.jpg"/>
+      	  </div>
       	  <div class="imagetext">
       	    <span>Orientation date</span>
       	    <p>Tue 10/11 & Wed 10/12: 8am - 3pm</p>
@@ -80,6 +83,9 @@
       	  <div class="image">
       	    <img src="material/images/information-campus.jpg" alt="Campus"/>
       	  </div>
+      	  <div class="mqrows">
+      	  	<img src="material/images/information-campus-mobile.jpg"/>
+      	  </div>
       	  <div class="imagetext">
       	    <span>Our campus</span>
       	    <p>Find which campus is close by you</p>
@@ -89,6 +95,9 @@
       	<div class="row3">
       	  <div class="image">
       	    <img src="material/images/information-guest-lecture.jpg" alt="Oliver Sack"/>
+      	  </div>
+      	  <div class="mqrows">
+      	  	<img src="material/images/information-guest-lecture-mobile.jpg"/>
       	  </div>
       	  <div class="imagetext">
       	    <span>Our guest lecture</span>
